Gateway/Production/HTTPRoute/HttpRoute-booking.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-httproute-booking
  namespace: gateway
  annotations:
    cert-manager.io/issuer: kong-issuer
spec:
  parentRefs:
    - name: kong-gateway
      sectionName: https
  hostnames:
  - "cinephoria.lol"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /booking
      backendRefs:
        - name: booking-service
          namespace: booking
          kind: Service
          port: 3001
