Gateway/Production/HTTPRoute/HttpRoute-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-httproute-dashboard
  namespace: gateway
  annotations:
    cert-manager.io/issuer: kong-issuer
spec:
  parentRefs:
    - name: kong-gateway
      sectionName: https
  hostnames:
    - "cinephoria.lol"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dashboard
      backendRefs:
        - name: dashboard-service
          namespace: dashboard
          kind: Service
          port: 3006
