Gateway/Production/HTTPRoute/HttpRoute-movie.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-httproute-movie
  namespace: gateway
  annotations:
    cert-manager.io/issuer: kong-issuer
spec:
  parentRefs:
    - name: kong-gateway
      sectionName: https
  hostnames:
    - "cinephoria.lol"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /category
        - path:
            type: PathPrefix
            value: /movie
        - path:
            type: PathPrefix
            value: /rating
      backendRefs:
        - name: movie-service
          namespace: movie
          kind: Service
          port: 3002
