Gateway/Production/HTTPRoute/HttpRoute-showtime.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-httproute-showtime
  namespace: gateway
spec:
  parentRefs:
    - name: kong-gateway
      sectionName: https
    - name: kong-gateway
      sectionName: http
  hostnames:
    - "cinephoria.lol"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /showtime
      backendRefs:
        - name: showtime-service
          namespace: showtime
          kind: Service
          port: 3003
